# persistent-fixtures

./: .travis.yml  LICENSE  README.md  persistent-fixtures.cabal
fixtures/: user.yml
src/Database/Persist/: Fixtures.hs
tests/: main.hs
