name:                persistent-fixtures
version:             0.1.0.0
synopsis:            Fixtures for Persistent.
license:             MIT
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.Persist.Fixtures
  build-depends:       base == 4.*
                     , bytestring >= 0.10
                     , exceptions
                     , filepath
                     , lifted-base
                     , monad-control
                     , persistent >= 1.3
                     , template-haskell
                     , text
                     , transformers
                     , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          main.hs
  hs-source-dirs:   tests
  build-depends:    aeson
                  , base
                  , HUnit
                  , persistent-fixtures
                  , persistent-sqlite
                  , persistent-template
                  , transformers
  default-language: Haskell2010
